--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,33 @@
-body {
-    background: black;
-    color: white;
+
+/* The * {} means apply styling to every element on webpage */
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
 }
+
+/* 
+ * css variables 
+ * declared as root variables so they can be used anywhere in project
+ */
+:root {
+    /* color scheme */
+    --color-bg: #1f1f38;
+    --color-bg-variant: #2c2c6c;
+    --color-primary: #4db5ff;
+    --color-primary-variant: rgba(77, 181, 255, 0.4);
+    --color-white: #fff;
+    --color-light: rgba(255, 255, 255, 0.6);
+
+    /* width of container class depending on screen size (large, medium, small) */
+    --container-width-lg: 75%; 
+    --container-width-md: 86%;
+    --container-width-sm: 90%;
+
+
+}
+
