--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
 /* The * {} means apply styling to every element on webpage */
 * {
@@ -27,6 +28,26 @@
     --container-width-lg: 75%; 
     --container-width-md: 86%;
     --container-width-sm: 90%;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+/* remove scrollbar from website */
+::-webkit-scrollbar {
+    display: none;
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+    background: var(--color-bg);
+    color: var(--color-white);  /* set text color */
+    line-height: 1.7;
+
+    /* add background texture */
+    background-image: url(../src/assets/bg-texture.png);
+    
 
 
 }
